# Newton-s-methods

./: .gitignore  README.md
report/: report.tex
src/: AbstractMethods.cpp  AbstractMethods.h  BFGSMethod.cpp  BFGSMethod.h  CMakeLists.txt  Function.cpp  Function.h  Newton.cpp  Newton.h  NewtonDirectionDescent.cpp  NewtonDirectionDescent.h  OptimisationNewton.cpp  OptimisationNewton.h  Point.cpp  Point.h  PowellMethod.cpp  PowellMethod.h  main.cpp
